Se organizó los layouts, se actualizó la base de datos y se ingresaron las librerías de plotly

--- a/templates/pages/authentication/auth-login.html
+++ b/templates/pages/authentication/auth-login.html
@@ -6,9 +6,9 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>Ingreso | TOPTEC</title>
+    <title>Ingreso | EPIDEMIOLOGOS CONSULTORES S.A.S</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Dashboard para TOPTEC desarrollado por BIOS" name="description" />
+    <meta content="Dashboard para EPIDEMIOLOGOS CONSULTORES S.A.S desarrollado por BIOS" name="description" />
     <meta content="Themesdesign" name="author" />
     <!-- App favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
@@ -94,7 +94,7 @@
                                             <p>????? <a href="{% url 'auth-register' %}" class="fw-medium text-primary">
                                                     ??????</a> </p>
                                             <p>©
-                                                <script>document.write(new Date().getFullYear())</script> TOPTEC
+                                                <script>document.write(new Date().getFullYear())</script> EPIDEMIOLOGOS CONSULTORES S.A.S
                                                 Dashboard BIOS?
                                             </p>
                                         </div>
