--- a/templates/pages/authentication/auth-recoverpw.html
+++ b/templates/pages/authentication/auth-recoverpw.html
@@ -6,9 +6,9 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>Recover Password | Dashboard TOPTEC</title>
+    <title>Recover Password | Dashboard EPIDEMIOLOGOS CONSULTORES S.A.S</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Dashboard para TOPTEC desarrollado por BIOS" name="description" />
+    <meta content="Dashboard para EPIDEMIOLOGOS CONSULTORES S.A.S desarrollado por BIOS" name="description" />
     <meta content="Themesdesign" name="author" />
     <!-- App favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
@@ -43,7 +43,7 @@
                                             </div>
 
                                             <h4 class="font-size-18 mt-4">Cambio de contraseña</h4>
-                                            <p class="text-muted">Cambio de contraseña para el Dashboard TOPTEC</p>
+                                            <p class="text-muted">Cambio de contraseña para el Dashboard EPIDEMIOLOGOS CONSULTORES S.A.S</p>
                                         </div>
 
                                         <div class="p-2 mt-5">
@@ -74,7 +74,7 @@
                                             <p>???? <a href="{% url 'auth-login'%}" class="fw-medium text-primary">
                                                     Ingresar </a> </p>
                                             <p>©
-                                                <script>document.write(new Date().getFullYear())</script> TOPTEC
+                                                <script>document.write(new Date().getFullYear())</script> EPIDEMIOLOGOS CONSULTORES S.A.S
                                             </p>
                                         </div>
                                     </div>
