--- a/templates/pages/utility/pages-500.html
+++ b/templates/pages/utility/pages-500.html
@@ -5,9 +5,9 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>{{title}} | Dashboard TOPTEC</title>
+    <title>{{title}} | Dashboard EPIDEMIOLOGOS CONSULTORES S.A.S</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Dashboard para TOPTEC desarrollado por BIOS" name="description" />
+    <meta content="Dashboard para EPIDEMIOLOGOS CONSULTORES S.A.S desarrollado por BIOS" name="description" />
     <meta content="Themesdesign" name="author" />
     <!-- App favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico'%}">
