--- a/templates/pages/authentication/auth-password-reset-confirm.html
+++ b/templates/pages/authentication/auth-password-reset-confirm.html
@@ -6,9 +6,9 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>Register | Dashboard TOPTEC</title>
+    <title>Register | Dashboard EPIDEMIOLOGOS CONSULTORES S.A.S</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Dashboard para TOPTEC desarrollado por BIOS" name="description" />
+    <meta content="Dashboard para EPIDEMIOLOGOS CONSULTORES S.A.S desarrollado por BIOS" name="description" />
     <meta content="Themesdesign" name="author" />
     <!-- App favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
@@ -83,7 +83,7 @@
                                             <p>Already have an account ? <a href="{% url 'auth-login' %}"
                                                     class="fw-medium text-primary"> Login</a> </p>
                                             <p>©
-                                                <script>document.write(new Date().getFullYear())</script> TOPTEC
+                                                <script>document.write(new Date().getFullYear())</script> EPIDEMIOLOGOS CONSULTORES S.A.S
                                             </p>
                                         </div>
                                     </div>
