--- a/templates/partials/content_renal.html
+++ b/templates/partials/content_renal.html
@@ -1,15 +1,18 @@
-
 {% load static %}
 
 {% block extra_css %}
 
-        <!-- DataTables -->
-        <link href="{% static 'libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css' %}" rel="stylesheet" type="text/css" />
-        <link href="{% static 'libs/datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css' %}" rel="stylesheet" type="text/css" />
-        <link href="{% static 'libs/datatables.net-select-bs4/css//select.bootstrap4.min.css' %}" rel="stylesheet" type="text/css" />
+<!-- DataTables -->
+<link href="{% static 'libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css' %}" rel="stylesheet"
+	type="text/css" />
+<link href="{% static 'libs/datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css' %}" rel="stylesheet"
+	type="text/css" />
+<link href="{% static 'libs/datatables.net-select-bs4/css//select.bootstrap4.min.css' %}" rel="stylesheet"
+	type="text/css" />
 
-        <!-- Responsive datatable examples -->
-        <link href="{% static 'libs/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css' %}" rel="stylesheet" type="text/css" />     
+<!-- Responsive datatable examples -->
+<link href="{% static 'libs/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css' %}" rel="stylesheet"
+	type="text/css" />
 
 {% endblock extra_css %}
 
@@ -21,11 +24,10 @@
 				<div class="card">
 					<div class="card-body">
 
-						<h4 class="card-title">Buttons Example</h4>
-						<p class="card-title-desc">The Buttons extension for DataTables
-							provides a common set of options, API methods and styling to display
-							buttons on a page that will interact with a DataTable. The core library
-							provides the based framework upon which plug-ins can built.
+						<h4 class="card-title">Estructura de la tabla</h4>
+						<p class="card-title-desc">Se muestra la estructura de columnas y filas de la tabla. Para
+							exportarla, presiona en el botón de
+							<b>CSV</b> o <b>Excel</b>, según como desees el formato.
 						</p>
 
 						<table id="datatable-buttons" class="table table-striped table-bordered" style=" width: 100%;">
@@ -78,7 +80,8 @@
 					<div class="card-body">
 						<div class="d-flex">
 							<div class="flex-1 overflow-hidden">
-								<p class="text-truncate font-size-14 mb-2">Número de pacientes no fallecidos a 5 años</p>
+								<p class="text-truncate font-size-14 mb-2">Número de pacientes no fallecidos a 5 años
+								</p>
 								<h4 class="mb-0">{{no_fallecidos}}</h4>
 							</div>
 							<div class="text-primary ms-auto"> <i class="ri-stack-line font-size-24"></i>
@@ -94,7 +97,8 @@
 					<div class="card-body">
 						<div class="d-flex">
 							<div class="flex-1 overflow-hidden">
-								<p class="text-truncate font-size-14 mb-2">Número de pacientes con función renal alterada</p>
+								<p class="text-truncate font-size-14 mb-2">Número de pacientes con función renal
+									alterada</p>
 								<h4 class="mb-0">{{funcion}}</h4>
 							</div>
 							<div class="text-primary ms-auto"> <i class="ri-stack-line font-size-24"></i>
@@ -123,7 +127,7 @@
 
 
 
-			
+
 
 			<div class="col-md-4">
 				<div class="card">
@@ -144,7 +148,7 @@
 
 
 
-			</div> <!-- end row -->
+		</div> <!-- end row -->
 
 
 
@@ -201,18 +205,12 @@
 				<div class="col-12">
 					<div class="card">
 						<div class="card-body">
-	
-							<h4 class="card-title">Buttons Example</h4>
-							<p class="card-title-desc">The Buttons extension for DataTables
-								provides a common set of options, API methods and styling to display
-								buttons on a page that will interact with a DataTable. The core library
-								provides the based framework upon which plug-ins can built.
-							</p>
-	
-								{% autoescape off %}
-								{{corr1}}
-								{% endautoescape %}
-							
+
+							<h4 class="card-title">Matriz de correlaciones de variables de entrada</h4>
+							{% autoescape off %}
+							{{corr1}}
+							{% endautoescape %}
+
 						</div>
 					</div>
 				</div> <!-- end col -->
@@ -225,18 +223,18 @@
 				<div class="col-12">
 					<div class="card">
 						<div class="card-body">
-	
-							<h4 class="card-title">Buttons Example</h4>
+
+							<h4 class="card-title">Matriz de correlaciones de variables de salida</h4>
 							<p class="card-title-desc">The Buttons extension for DataTables
 								provides a common set of options, API methods and styling to display
 								buttons on a page that will interact with a DataTable. The core library
 								provides the based framework upon which plug-ins can built.
 							</p>
-	
-								{% autoescape off %}
-								{{corr2}}
-								{% endautoescape %}
-							
+
+							{% autoescape off %}
+							{{corr2}}
+							{% endautoescape %}
+
 						</div>
 					</div>
 				</div> <!-- end col -->
@@ -249,18 +247,18 @@
 				<div class="col-12">
 					<div class="card">
 						<div class="card-body">
-	
-							<h4 class="card-title">Buttons Example</h4>
+
+							<h4 class="card-title">Matriz de correlaciones de variables de salida vs entrada</h4>
 							<p class="card-title-desc">The Buttons extension for DataTables
 								provides a common set of options, API methods and styling to display
 								buttons on a page that will interact with a DataTable. The core library
 								provides the based framework upon which plug-ins can built.
 							</p>
-	
-								{% autoescape off %}
-								{{io}}
-								{% endautoescape %}
-							
+
+							{% autoescape off %}
+							{{io}}
+							{% endautoescape %}
+
 						</div>
 					</div>
 				</div> <!-- end col -->
@@ -275,18 +273,18 @@
 				<div class="col-12">
 					<div class="card">
 						<div class="card-body">
-	
-							<h4 class="card-title">Buttons Example</h4>
+
+							<h4 class="card-title">Relación entre edad y creatinina primer año</h4>
 							<p class="card-title-desc">The Buttons extension for DataTables
 								provides a common set of options, API methods and styling to display
 								buttons on a page that will interact with a DataTable. The core library
 								provides the based framework upon which plug-ins can built.
 							</p>
-	
-								{% autoescape off %}
-								{{linear}}
-								{% endautoescape %}
-							
+
+							{% autoescape off %}
+							{{linear}}
+							{% endautoescape %}
+
 						</div>
 					</div>
 				</div> <!-- end col -->
@@ -294,106 +292,107 @@
 		</div>
 
 
+		<div class="row">
 			<div class="row">
-				<div class="row">
-					<div class="col-12">
-						<div class="card">
-							<div class="card-body">
-		
-								<h4 class="card-title">Buttons Example</h4>
-								<p class="card-title-desc">The Buttons extension for DataTables
-									provides a common set of options, API methods and styling to display
-									buttons on a page that will interact with a DataTable. The core library
-									provides the based framework upon which plug-ins can built.
-								</p>
-		
-									{% autoescape off %}
-									{{dialisis}}
-									{% endautoescape %}
-								
-							</div>
+				<div class="col-12">
+					<div class="card">
+						<div class="card-body">
+
+							<h4 class="card-title">Diagrama de barras por diálisis y supervivencia del paciente a 5 años
+							</h4>
+							<p class="card-title-desc">The Buttons extension for DataTables
+								provides a common set of options, API methods and styling to display
+								buttons on a page that will interact with a DataTable. The core library
+								provides the based framework upon which plug-ins can built.
+							</p>
+
+							{% autoescape off %}
+							{{dialisis}}
+							{% endautoescape %}
+
 						</div>
-					</div> <!-- end col -->
-				</div> <!-- end row -->
-			</div>
-				
-
-				<div class="row">
-					<div class="row">
-						<div class="col-12">
-							<div class="card">
-								<div class="card-body">
-			
-									<h4 class="card-title">Buttons Example</h4>
-									<p class="card-title-desc">The Buttons extension for DataTables
-										provides a common set of options, API methods and styling to display
-										buttons on a page that will interact with a DataTable. The core library
-										provides the based framework upon which plug-ins can built.
-									</p>
-			
-										{% autoescape off %}
-										{{muerte}}
-										{% endautoescape %}
-									
-								</div>
-							</div>
-						</div> <!-- end col -->
-					</div> <!-- end row -->
-				</div>
-
-
-				<div class="row">
-					<div class="row">
-						<div class="col-12">
-							<div class="card">
-								<div class="card-body">
-			
-									<h4 class="card-title">Buttons Example</h4>
-									<p class="card-title-desc">The Buttons extension for DataTables
-										provides a common set of options, API methods and styling to display
-										buttons on a page that will interact with a DataTable. The core library
-										provides the based framework upon which plug-ins can built.
-									</p>
-			
-										{% autoescape off %}
-										{{etiologia_funcion}}
-										{% endautoescape %}
-									
-								</div>
-							</div>
-						</div> <!-- end col -->
-					</div> <!-- end row -->
-				</div>
-	
-
+					</div>
+				</div> <!-- end col -->
+			</div> <!-- end row -->
 		</div>
-		<!-- end row -->
 
-		
 
-		{% endblock content %}
+		<div class="row">
+			<div class="row">
+				<div class="col-12">
+					<div class="card">
+						<div class="card-body">
 
-		{% block extra_javascript %}
-        <!-- Required datatable js -->
-        <script src="{% static 'libs/datatables.net/js/jquery.dataTables.min.js' %}"></script>
-        <script src="{% static 'libs/datatables.net-bs4/js/dataTables.bootstrap4.min.js' %}"></script>
-        <!-- Buttons examples -->
-        <script src="{% static 'libs/datatables.net-buttons/js/dataTables.buttons.min.js' %}"></script>
-        <script src="{% static 'libs/datatables.net-buttons-bs4/js/buttons.bootstrap4.min.js' %}"></script>
-        <script src="{% static 'libs/jszip/jszip.min.js' %}"></script>
-        <script src="{% static 'libs/pdfmake/build/pdfmake.min.js' %}"></script>
-        <script src="{% static 'libs/pdfmake/build/vfs_fonts.js' %}"></script>
-        <script src="{% static 'libs/datatables.net-buttons/js/buttons.html5.min.js' %}"></script>
-        <script src="{% static 'libs/datatables.net-buttons/js/buttons.print.min.js' %}"></script>
-        <script src="{% static 'libs/datatables.net-buttons/js/buttons.colVis.min.js' %}"></script>
+							<h4 class="card-title">Diagramas de barras por sexo y supervivencia del paciente</h4>
+							<p class="card-title-desc">The Buttons extension for DataTables
+								provides a common set of options, API methods and styling to display
+								buttons on a page that will interact with a DataTable. The core library
+								provides the based framework upon which plug-ins can built.
+							</p>
 
-        <script src="{% static 'libs/datatables.net-keytable/js/dataTables.keyTable.min.js' %}"></script>
-        <script src="{% static 'libs/datatables.net-select/js/dataTables.select.min.js' %}"></script>
-        
-        <!-- Responsive examples -->
-        <script src="{% static 'libs/datatables.net-responsive/js/dataTables.responsive.min.js' %}"></script>
-        <script src="{% static 'libs/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js' %}"></script>
+							{% autoescape off %}
+							{{muerte}}
+							{% endautoescape %}
 
-        <!-- Datatable init js -->
-        <script src="{% static 'js/pages/datatables.init.js' %}"></script>
-{% endblock extra_javascript %}
+						</div>
+					</div>
+				</div> <!-- end col -->
+			</div> <!-- end row -->
+		</div>
+
+
+		<div class="row">
+			<div class="row">
+				<div class="col-12">
+					<div class="card">
+						<div class="card-body">
+
+							<h4 class="card-title">Diagrama de barras por etiología y función renal alterada</h4>
+							<p class="card-title-desc">The Buttons extension for DataTables
+								provides a common set of options, API methods and styling to display
+								buttons on a page that will interact with a DataTable. The core library
+								provides the based framework upon which plug-ins can built.
+							</p>
+
+							{% autoescape off %}
+							{{etiologia_funcion}}
+							{% endautoescape %}
+
+						</div>
+					</div>
+				</div> <!-- end col -->
+			</div> <!-- end row -->
+		</div>
+
+
+	</div>
+	<!-- end row -->
+
+
+
+	{% endblock content %}
+
+	{% block extra_javascript %}
+	<!-- Required datatable js -->
+	<script src="{% static 'libs/datatables.net/js/jquery.dataTables.min.js' %}"></script>
+	<script src="{% static 'libs/datatables.net-bs4/js/dataTables.bootstrap4.min.js' %}"></script>
+	<!-- Buttons examples -->
+	<script src="{% static 'libs/datatables.net-buttons/js/dataTables.buttons.min.js' %}"></script>
+	<script src="{% static 'libs/datatables.net-buttons-bs4/js/buttons.bootstrap4.min.js' %}"></script>
+	<script src="{% static 'libs/jszip/jszip.min.js' %}"></script>
+	<script src="{% static 'libs/pdfmake/build/pdfmake.min.js' %}"></script>
+	<script src="{% static 'libs/pdfmake/build/vfs_fonts.js' %}"></script>
+	<script src="{% static 'libs/datatables.net-buttons/js/buttons.html5.min.js' %}"></script>
+	<script src="{% static 'libs/datatables.net-buttons/js/buttons.print.min.js' %}"></script>
+	<script src="{% static 'libs/datatables.net-buttons/js/buttons.colVis.min.js' %}"></script>
+
+	<script src="{% static 'libs/datatables.net-keytable/js/dataTables.keyTable.min.js' %}"></script>
+	<script src="{% static 'libs/datatables.net-select/js/dataTables.select.min.js' %}"></script>
+
+	<!-- Responsive examples -->
+	<script src="{% static 'libs/datatables.net-responsive/js/dataTables.responsive.min.js' %}"></script>
+	<script src="{% static 'libs/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js' %}"></script>
+
+	<!-- Datatable init js -->
+	<script src="{% static 'js/pages/datatables.init.js' %}"></script>
+	{% endblock extra_javascript %}
