--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -7,7 +7,7 @@
 		<div id="sidebar-menu">
 			<!-- Left Menu Start -->
 			<ul class="metismenu list-unstyled" id="side-menu">
-				<li class="menu-title" key="t-menu">Transplante renal</li>
+				<li class="menu-title" key="t-menu">TRANSPLANTE RENAL</li>
 				<li>
 					<a href="{% url 'trasplante' %}" class="waves-effect"> <i class="ri-dashboard-line"></i>
 						<!-- <span class="badge rounded-pill bg-success float-end">3</span> -->
@@ -28,6 +28,30 @@
 						<span key="t-update">Actualizar información</span>
 					</a>
 				</li>
+
+
+				<ul class="metismenu list-unstyled" id="side-menu">
+					<li class="menu-title" key="t-menu">EPILEPSIA</li>
+					<li>
+						<a href="{% url 'epilepsia' %}" class="waves-effect"> <i class="ri-dashboard-line"></i>
+							<!-- <span class="badge rounded-pill bg-success float-end">3</span> -->
+							<span key="t-trasplante">Dashboard</span>
+						</a>
+					</li>
+	
+					<li>
+						<a href="{% url 'eda' %}" class="waves-effect"> <i class="ri-eda-line"></i>
+							<!-- <span class="badge rounded-pill bg-success float-end">3</span> -->
+							<span key="t-eda">Análisis Exploratorio</span>
+						</a>
+					</li>
+	
+					<li>
+						<a href="{% url 'update' %}" class="waves-effect"> <i class="ri-update-line"></i>
+							<!-- <span class="badge rounded-pill bg-success float-end">3</span> -->
+							<span key="t-update">Actualizar información</span>
+						</a>
+					</li>
 
 		</div>
 		<!-- Sidebar -->
