If you see this, take a cup of coffee

--- a/templates/partials/content_epilepsia.html
+++ b/templates/partials/content_epilepsia.html
@@ -79,7 +79,8 @@
 					<div class="card-body">
 						<div class="d-flex">
 							<div class="flex-1 overflow-hidden">
-								<p class="text-truncate font-size-14 mb-2">Pacientes con trastorno de aprendizaje de tipo RR</p>
+								<p class="text-truncate font-size-14 mb-2">Pacientes con trastorno de aprendizaje de
+									tipo RR</p>
 								<h4 class="mb-0">{{rr}}</h4>
 							</div>
 							<div class="text-primary ms-auto"> <i class="ri-stack-line font-size-24"></i>
@@ -95,7 +96,8 @@
 					<div class="card-body">
 						<div class="d-flex">
 							<div class="flex-1 overflow-hidden">
-								<p class="text-truncate font-size-14 mb-2">Pacientes con trastorno de aprendizaje de tipo VV</p>
+								<p class="text-truncate font-size-14 mb-2">Pacientes con trastorno de aprendizaje de
+									tipo VV</p>
 								<h4 class="mb-0">{{vv}}</h4>
 							</div>
 							<div class="text-primary ms-auto"> <i class="ri-stack-line font-size-24"></i>
@@ -110,7 +112,8 @@
 					<div class="card-body">
 						<div class="d-flex">
 							<div class="flex-1 overflow-hidden">
-								<p class="text-truncate font-size-14 mb-2">Pacientes con trastorno de aprendizaje de tipo EE</p>
+								<p class="text-truncate font-size-14 mb-2">Pacientes con trastorno de aprendizaje de
+									tipo EE</p>
 								<h4 class="mb-0">{{ee}}</h4>
 							</div>
 							<div class="text-primary ms-auto"> <i class="ri-stack-line font-size-24"></i>
@@ -126,7 +129,8 @@
 					<div class="card-body">
 						<div class="d-flex">
 							<div class="flex-1 overflow-hidden">
-								<p class="text-truncate font-size-14 mb-2">Pacientes con trastorno de aprendizaje de tipo NN</p>
+								<p class="text-truncate font-size-14 mb-2">Pacientes con trastorno de aprendizaje de
+									tipo NN</p>
 								<h4 class="mb-0">{{nn}}</h4>
 							</div>
 							<div class="text-primary ms-auto"> <i class="ri-stack-line font-size-24"></i>
@@ -174,7 +178,7 @@
 				</div>
 			</div>
 
-			
+
 
 			<div class="col-md-4">
 				<div class="card">
@@ -194,7 +198,7 @@
 				</div>
 			</div>
 
-	
+
 
 
 
@@ -268,12 +272,34 @@
 				</div> <!-- end col -->
 			</div> <!-- end row -->
 		</div>
-		
-		
-		
-		
 
-		
+		<div class="row">
+			<div class="row ">
+				<div class="col-12">
+					<div class="card ">
+						<div class="card-body">
+
+							<h4 class="card-title">Diagrama de barras entre CLINICA y Razonamiento Lógico</h4>
+							<p class="card-title-desc">The Buttons extension for DataTables
+								provides a common set of options, API methods and styling to display
+								buttons on a page that will interact with a DataTable. The core library
+								provides the based framework upon which plug-ins can built.
+							</p>
+
+							{% autoescape off %}
+							{{reg}}
+							{% endautoescape %}
+
+						</div>
+					</div>
+				</div> <!-- end col -->
+			</div> <!-- end row -->
+		</div>
+
+
+
+
+
 
 
 	</div>
