--- a/templates/menu/eda.html
+++ b/templates/menu/eda.html
@@ -13,7 +13,7 @@
                                     <div class="card-body">
         
                                         <h4 class="card-title">Análisis Exploratorio</h4>
-                                        <p class="card-title-desc">Prueba
+                                        <p class="card-title-desc">Informe de análsis exploratorio e ingeniería de características para el conjunto de Trasplante Renal
                                         </p>
 
                                         <object data="{% static 'pdf/eda1.pdf' %}" style="width: 100%; height: 1000px; display: block;"></object>
