--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -6,8 +6,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>{{title}} | Dashboard EPIDEMIOLOGOS CONSULTORES S.A.S</title>
-	<meta content="Dashboard para EPIDEMIOLOGOS CONSULTORES S.A.S desarrollado por BIOS" name="description" />
+	<title>{{title}} | EPIDEMIOLOGOS CONSULTORES S.A.S</title>
+	<meta content="Dashboard para EPIDEMIOLOGOS CONSULTORES S.A.S" name="description" />
 	<meta content="Themesdesign" name="author" />
 	<!-- App favicon -->
 	<link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
@@ -24,7 +24,7 @@
 <body data-sidebar="dark">
 
 	{% block preloader %}
-	{% comment %} {% include 'partials/preloader.html' %} {% endcomment %}
+	 {% include 'partials/preloader.html' %} 
 	{% endblock preloader %}
 	<!-- Begin page -->
 	<div id="layout-wrapper">
