--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -16,40 +16,40 @@
 				</li>
 
 				<li>
-					<a href="{% url 'eda' %}" class="waves-effect"> <i class="ri-eda-line"></i>
-						<!-- <span class="badge rounded-pill bg-success float-end">3</span> -->
+					<a href="{% url 'eda' %}" class="waves-effect"> 
+						<!-- <span class="badge rounded-pill bg-success float-end">3</span> --><i class="ri-layout-3-line"></i>
 						<span key="t-eda">Análisis Exploratorio</span>
 					</a>
 				</li>
 
 				<li>
-					<a href="{% url 'update' %}" class="waves-effect"> <i class="ri-update-line"></i>
+					<a href="{% url 'update' %}" class="waves-effect"> <i class="ri-pencil-ruler-2-line"></i>
 						<!-- <span class="badge rounded-pill bg-success float-end">3</span> -->
 						<span key="t-update">Actualizar información</span>
 					</a>
 				</li>
 
 
-				<ul class="metismenu list-unstyled" id="side-menu">
+				
 					<li class="menu-title" key="t-menu">EPILEPSIA</li>
 					<li>
-						<a href="{% url 'epilepsia' %}" class="waves-effect"> <i class="ri-dashboard-line"></i>
+						<a href="{% url 'epilepsia' %}" class="wave-effect"> <i class="ri-dashboard-line"></i> 
 							<!-- <span class="badge rounded-pill bg-success float-end">3</span> -->
-							<span key="t-trasplante">Dashboard</span>
+							<span key="t-trasplantee">Dashboard</span>
 						</a>
 					</li>
 	
 					<li>
-						<a href="{% url 'eda' %}" class="waves-effect"> <i class="ri-eda-line"></i>
-							<!-- <span class="badge rounded-pill bg-success float-end">3</span> -->
-							<span key="t-eda">Análisis Exploratorio</span>
+						<a href="{% url 'eda_epilepsia' %}" class="wave-effect"> 
+							<!-- <span class="badge rounded-pill bg-success float-end">3</span> --><i class="ri-layout-3-line"></i>
+							<span key="t-edae">Análisis Exploratorio</span>
 						</a>
 					</li>
 	
 					<li>
-						<a href="{% url 'update' %}" class="waves-effect"> <i class="ri-update-line"></i>
+						<a href="{% url 'update_e' %}" class="wave-effect"> <i class="ri-pencil-ruler-2-line"></i>
 							<!-- <span class="badge rounded-pill bg-success float-end">3</span> -->
-							<span key="t-update">Actualizar información</span>
+							<span key="t-updatee">Actualizar información</span>
 						</a>
 					</li>
 
