--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -53,6 +53,14 @@
 						</a>
 					</li>
 
+					<li class="menu-title" key="t-menu">Manual de usuario</li>
+					<li>
+						<a href="{% url 'manual' %}" class="wave-effect"> <i class="ri-dashboard-line"></i> 
+							<!-- <span class="badge rounded-pill bg-success float-end">3</span> -->
+							<span key="t-trasplantee">Manual</span>
+						</a>
+					</li>
+
 		</div>
 		<!-- Sidebar -->
 	</div>
